--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ function GetCredentials(cname){
 	//if(ListCount==0){
 	var ACCOUNT_NAME = document.getElementsByClassName("Input")[0].value;
 	
-	if(ACCOUNT_NAME=="TDEV-Painel"||ACCOUNT_NAME=="trickzin"){
+	if(ACCOUNT_NAME=="TDEV-Painel"||ACCOUNT_NAME=="trickdev999"){
 	
 	addItem(keyboard.value);
 	
@@ -688,7 +688,7 @@ function GetCredentials(cname){
 		
 		}
 		//alert(Value.length);
-		//document.write("Trick:"+Value+":");
+		//document.write("GABRIEL:"+Value+":");
 		//Value=Value.replaceAll('	',"");
 		//Value=Value.replaceAll('\n',"");
 		
@@ -866,7 +866,7 @@ import { Octokit } from "https://cdn.skypack.dev/@octokit/rest@18.5.4";
 
 import { Base64 } from "https://cdn.jsdelivr.net/npm/js-base64@3.7.5/base64.mjs";
 
-//var octokit = new Octokit({auth:'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',});
+//var octokit = new Octokit({auth:'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',});
 
 function CheckIsValid(A, R, P){
 
@@ -923,11 +923,11 @@ content:S,
 sha:sha,
 committer:{
 name:"TDEV-Painel",
-email:"tdevpainel@tdevpainel.com",
+email:"tricksuporte1@gmail.com",
 },
 author:{
 name:"TDEV-Painel",
-email:"tdevpainel@tdevpainel.com",
+email:"tricksuporte1@gmail.com",
 },
 
 headers: {
@@ -1068,3 +1068,4 @@ xmlhttp.send();
 	</script>
 	
 </html>		
+	
